Added gender chart

--- a/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-chart-global-filters/salary-chart-global-filters.component.html
@@ -1,6 +1,11 @@
 <div>
   <form *ngIf="form" [formGroup]="form" (ngSubmit)="apply()">
     <div class="h5 mb-2">Глобальные фильтры</div>
+    <div class="mb-2">
+      Вы можете поделиться информацией с кем-то в соцсетях или телеграме. 
+      Для этого сначала примените нужные фильтры, а затем нажмите на кнопку "Поделиться".
+      Ссылка будет скопирована в буфер обмена
+    </div>
     <div class="row">
       <div class="col-md-2 mb-1">
         <label class="text-sm">Грейд</label>
