--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -133,23 +133,23 @@
           ></app-salary-chart-global-filters>
         </div>
 
-        <div class="mb-5">
+        <div class="mt-3 mb-5">
           <app-grades-min-max-chart
             [salaries]="salariesChart.salaries">
           </app-grades-min-max-chart>
         </div>
 
-        <div class="mb-5">
+        <div class="mt-3 mb-5">
           <app-people-distribution-chart
             [chart]="salariesChart"
             ></app-people-distribution-chart>
         </div>
 
-        <div class="mb-5">
+        <div class="mt-3 mb-5">
           <app-people-by-grades-chart [source]="salariesChart"></app-people-by-grades-chart>
         </div>
 
-        <div class="mb-5" *ngIf="skills.length > 0">
+        <div class="mt-3 mb-5" *ngIf="skills.length > 0">
           <app-salaries-skills-chart
             [skills]="skills"
             [currentSalary]="salariesChart.currentUserSalary"
@@ -158,7 +158,7 @@
           </app-salaries-skills-chart>
         </div>
 
-        <div class="mb-5" *ngIf="industries.length > 0">
+        <div class="mt-3 mb-5" *ngIf="industries.length > 0">
           <app-work-industries-chart
             [industries]="industries"
             [currentSalary]="salariesChart.currentUserSalary"
@@ -167,7 +167,7 @@
           </app-work-industries-chart>
         </div>
 
-        <div class="mb-5">
+        <div class="mt-3 mb-5">
           <app-cities-doughnut-chart
             [currentSalary]="salariesChart.currentUserSalary"
             [salaries]="salariesChart.salaries"
@@ -175,7 +175,14 @@
           </app-cities-doughnut-chart>
         </div>
 
-        <div class="mb-5">
+        <div class="mt-3 mb-5">
+          <app-people-by-gender-chart
+            [salaries]="salariesChart.salaries"
+            (editSalaryActionClick)="openEditSalaryAction()"
+            [currentSalary]="salariesChart.currentUserSalary"></app-people-by-gender-chart>
+        </div>
+
+        <div class="mt-3 mb-5">
           <app-salaries-by-grades-chart
             [chart]="salariesChart.salariesByMoneyBarChart"
             [title]="'Зарплаты в Казахстанских компаниях'"
@@ -184,7 +191,7 @@
           </app-salaries-by-grades-chart>
         </div>
 
-        <div class="mb-5" *ngIf="salariesChart.hasRemoteSalaries">
+        <div class="mt-3 mb-5" *ngIf="salariesChart.hasRemoteSalaries">
           <app-salaries-by-grades-chart
             [chart]="salariesChart.salariesByMoneyBarChartForRemote"
             [title]="'Зарплаты тех, кто работает удаленно в иностранных компаниях'"
