--- a/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-grades-chart/people-by-grades-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h5 mb-3">Распределение респондентов по грейдам</div>
+  <div class="h5 mb-3">Грейд респондентов</div>
 
   <div class="mb-3" *ngIf="barsForLocal.length > 0">
     <div class="mb-3">
