--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -1,13 +1,13 @@
 <div class="">
-  <div class="h5 mb-3">Min/max зарплаты по грейдам</div>
-
-  <div class="fst-italic">
-    Черные точки - это значения зарплаты, которые встречаются в выборке.
-  </div>
+  <div class="h5 mb-3">Зарплаты по грейдам</div>
 
   <div class="" *ngIf="canvasId">
     <div id="canvas-container">
       <canvas [attr.id]="canvasId">{{chartDataLocal}}</canvas>
     </div>
+  </div>
+
+  <div class="fst-italic">
+    Черные точки - это значения зарплаты, которые встречаются в выборке.
   </div>
 </div>
