--- a/src/app/modules/salaries/components/professions-distribution-chart/people-distribution-chart.component.html
+++ b/src/app/modules/salaries/components/professions-distribution-chart/people-distribution-chart.component.html
@@ -1,7 +1,7 @@
 <div class="">
-  <div class="h5 mb-3">Распределение по специальностям</div>
+  <div class="h5 mb-3">Специализация</div>
 
-  <div class="fst-italic">График отображает распределение респондентов по специальностям в процентном соотношении к общему числу</div>
+  <div class="fst-italic">График показывает распределение респондентов по специальностям в процентном соотношении к общему числу</div>
   <div class="row">
 
     <div class="col-md-6 mb-3" *ngIf="canvasIdLocal">
