Added two charts

--- a/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.html
+++ b/src/app/modules/salaries/components/cities-doughnut-chart/cities-doughnut-chart.component.html
@@ -35,7 +35,7 @@
 </div>
 
 <ng-template #hasCityInSalary>
-  <div class="fst-italic">
+  <div class="fst-italic text-muted">
     Вы уже указали ваш город проживания. Спасибо!
   </div>
 </ng-template>
