--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div class="fst-italic">
+  <div class="fst-italic text-muted">
     Черные точки - это значения зарплаты, которые встречаются в выборке.
   </div>
 </div>
