--- a/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-gender-chart/people-by-gender-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h5 mb-3">Гендер респондента</div>
+  <div class="h4 mb-3">Гендер респондента</div>
 
   <div class="mb-3" *ngIf="barsForLocal.length > 0">
     <div class="mb-3">
@@ -55,7 +55,7 @@
 </div>
 
 <ng-template #hasGenderInSalary>
-  <div class="fst-italic">
+  <div class="fst-italic text-muted">
     Вы уже указали ваш пол. Спасибо!
   </div>
 </ng-template>
