--- a/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-skills-chart/salaries-skills-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h5 mb-3">Языки программирования и фреймворки</div>
+  <div class="h4 mb-3">Языки программирования и фреймворки</div>
 
   <div class="mb-1">
     <input
@@ -27,7 +27,7 @@
 </div>
 
 <ng-template #hasSkillInSalary>
-  <div class="fst-italic">
+  <div class="fst-italic text-muted">
     Вы уже указали ваш основной ЯП/фреймворк. Спасибо!
   </div>
 </ng-template>
