--- a/src/app/modules/salaries/components/work-industries-chart/work-industries-chart.component.html
+++ b/src/app/modules/salaries/components/work-industries-chart/work-industries-chart.component.html
@@ -1,5 +1,5 @@
 <div class="">
-  <div class="h5 mb-3">Где работают респонденты</div>
+  <div class="h4 mb-3">Где работают респонденты</div>
   <div class="mb-1">
     <input
       type="checkbox"
@@ -26,7 +26,7 @@
 </div>
 
 <ng-template #hasSkillInSalary>
-  <div class="fst-italic">
+  <div class="fst-italic text-muted">
     Вы уже указали сферу деятельности вашей компании. Спасибо!
   </div>
 </ng-template>
