--- a/src/app/modules/salaries/components/people-by-age-chart/people-by-age-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-age-chart/people-by-age-chart.component.html
@@ -1,5 +1,10 @@
 <div class="">
   <div class="h4 mb-3">Возраст респондентов</div>
+
+  <div class="fst-italic">
+    Анкет: {{countOfResponses}}
+  </div>
+
   <div class="" *ngIf="canvasId">
     <div id="canvas-container">
       <canvas [attr.id]="canvasId">{{chartDataLocal}}</canvas>
