--- a/src/app/modules/salaries/components/people-by-experience-chart/people-by-experience-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-experience-chart/people-by-experience-chart.component.html
@@ -2,7 +2,7 @@
   <div class="h4 mb-3">Опыт респондентов</div>
   
   <div class="fst-italic">
-    График показывает, сколько лет опыта работы у респондента на момент заполнения анкеты.
+    График показывает, сколько лет опыта работы у респондента на момент заполнения анкеты. Анкет: {{countOfResponses}}
   </div>
   <div class="" *ngIf="canvasId">
     <div id="canvas-container">
