--- a/src/app/modules/salaries/components/people-by-age-chart/people-by-age-chart.component.html
+++ b/src/app/modules/salaries/components/people-by-age-chart/people-by-age-chart.component.html
@@ -2,7 +2,7 @@
   <div class="h4 mb-3">Возраст респондентов</div>
 
   <div class="fst-italic">
-    Анкет: {{countOfResponses}}
+    Ответов: {{countOfResponses}}
   </div>
 
   <div class="" *ngIf="canvasId">
