--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -1,17 +1,19 @@
-<app-page-header>Who we are</app-page-header>
+<app-page-header>О проекте</app-page-header>
 
 <div class="container">
   <div class="card">
     <div class="card-body p-5">
       <div class="fs-4">
-        <span class="fw-light">Author:</span>
-        <a class="text-reset ms-2" href="https://mgorbatyuk.dev" target="_blank">Maxim Gorbatyuk</a>
+        <div class="fw-light">Автор:</div>
+        <div>
+          <a class="text-reset" href="https://mgorbatyuk.dev" target="_blank">Максим Горбатюк</a>
+        </div>
       </div>
 
-      <div class="mb-3 mt-3">
-        <div class="mb-1">Contributors</div>
+      <div class="mb-3 mt-5">
+        <div class="mb-1 h5">Контрибьюторы</div>
         <div>
-          <ul>
+          <ul class="">
             <li>
               <a class="text-reset" href="https://github.com/indicozy" target="_blank">Berkut Karlibay</a>
             </li>
@@ -22,14 +24,23 @@
         </div>
       </div>
 
-      <hr class="mt-3" />
+      <div class="mb-3 mt-5">
+        <div class="mb-1 h5">в СМИ о нас</div>
+        <div>
+          <a class="text-reset" href="https://digitalbusiness.kz/2024-03-12/almatinets-sozdal-servis-dlya-sbora-dannih-o-zarplatah-kazahstanskih-aytishnikov/" target="_blank">
+            Алматинец создал сервис для сбора информации о зарплатах казахстанских айтишников
+          </a>, Digital Business, 13 марта 2024
+        </div>
+      </div>
+
+      <hr class="mt-5" />
       <div class="mt-3">
         <span><i class="bi bi-geo"></i></span>
-        <span class="ms-3">Kazakhstan, Almaty</span>
+        <span class="ms-3">Алматы, Казахстан</span>
       </div>
       <div class="mt-1">
         <span><i class="bi bi-github"></i></span>
-        <span class="ms-3"><a class="text-reset" href="https://github.com/orgs/Techinterview-space/repositories" target="_blank">Github repositories</a></span>
+        <span class="ms-3"><a class="text-reset" href="https://github.com/orgs/Techinterview-space/repositories" target="_blank">Github репозитории</a></span>
       <div class="mt-1">
         <span><i class="bi bi-envelope"></i></span>
         <span class="ms-3">ake111aa&#64;yandex.ru</span>
