Added grade tables

--- a/src/app/modules/salaries/components/salaries-chart/salary-block-remote-value/salary-block-remote-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-remote-value/salary-block-remote-value.component.html
@@ -1,7 +1,14 @@
 <div>
-  <div *ngIf="title" class="text-muted">{{ title }}</div>
-  <div class="text-muted">
-    <span class="h3 me-1">{{ value }}</span>
-    <span class="h4">тг.</span>
-  </div>
+  <div class="text-muted">На удаленке</div>
+    <div>
+      <span class="">Медианная:</span>
+      <span class="h4 ms-3">{{ median }}</span>
+      <span class="h4 ms-2 text-muted">тг.</span>
+    </div>
+
+    <div>
+      <span class="">Средняя:</span>
+      <span class="h4 ms-3">{{ average }}</span>
+      <span class="h4 ms-2 text-muted">тг.</span>
+    </div>
 </div>
