--- a/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salary-block-value/salary-block-value.component.html
@@ -1,7 +1,33 @@
 <div>
-  <div class="text-muted">{{ title }}</div>
   <div class="">
-    <span class="display-1 me-2">{{ value }}</span>
-    <span class="h4 text-muted">тг.</span>
+    <div class="text-muted">Медианная зарплата в локальных компаниях</div>
+    <div>
+      <span class="display-1 me-2">{{ median }}</span>
+      <span class="h4 text-muted">тг.</span>
+    </div>
+  </div>
+
+  <div class="mt-2">
+    <div class="text-muted">Средняя зарплата</div>
+    <div class="">
+      <span class="h3 me-2">{{ average }}</span>
+      <span class="h4 ">тг.</span>
+    </div>
+  </div>
+
+  <div class="mt-2">
+    <div class="text-muted">Медианная на удаленке</div>
+    <div class="">
+      <span class="h3 me-2">{{ medianRemote }}</span>
+      <span class="h4 ">тг.</span>
+    </div>
+  </div>
+
+  <div class="mt-2">
+    <div class="text-muted">Средняя на удаленке</div>
+    <div class="">
+      <span class="h3 me-2">{{ averageRemote }}</span>
+      <span class="h4 ">тг.</span>
+    </div>
   </div>
 </div>
