--- a/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
+++ b/src/app/modules/salaries/components/salaries-chart/salaries-chart.component.html
@@ -37,36 +37,12 @@
       </div>
 
       <div class="mb-3">
-        <div class="mb-5 d-flex justify-content-between align-items-end">
-          <app-salary-block-value
-            [title]="'Медианная зарплата:'"
-            [value]="salariesChart.medianSalary"></app-salary-block-value>
+        <app-salary-block-value
+            [source]="salariesChart"></app-salary-block-value>
 
-            <div *ngIf="!showDataStub && salariesChart.medianRemoteSalary" class="d-none d-md-block">
-              <app-salary-block-remote-value
-                [title]="'На удаленке:'"
-                [value]="salariesChart.medianRemoteSalary"></app-salary-block-remote-value>
-            </div>
-
-        </div>
-
-        <div class="mb-3 d-flex justify-content-between align-items-end">
-
-          <app-salary-block-value
-            [title]="'Средняя зарплата:'"
-            [value]="salariesChart.averageSalary"></app-salary-block-value>
-
-            <div *ngIf="!showDataStub && salariesChart.averageRemoteSalary" class="d-none d-md-block">
-              <app-salary-block-remote-value
-                [title]="'На удаленке:'"
-                [value]="salariesChart.averageRemoteSalary"></app-salary-block-remote-value>
-            </div>
-        </div>
-       
-
-        <div class="mb-3">
+        <div class="mb-3 mt-3">
           <div class="text-muted mb-3 fst-italic">
-            <span>Рассчитано на основе {{ salariesChart.countOfRecords }} анкет(ы)</span>
+            <span>* Рассчитано на основе {{ salariesChart.countOfRecords }} анкет(ы)</span>
           </div>
 
           <div
@@ -145,8 +121,22 @@
         </div>
 
         <div class="mt-5 mb-5">
+          <div class="h4">Зарплаты по грейдам в таблицах</div>
+          <div class="row mt-3">
+            <div class="col-md-6 mb-3">
+              <div class="h5 mb-2">Казахстан</div>
+              <app-salaries-by-grade-block [source]="salariesChart.localSalariesByGrade"></app-salaries-by-grade-block>
+            </div>
+            <div class="col-md-6 mb-3">
+              <div class="h5 mb-2">Удаленка</div>
+              <app-salaries-by-grade-block [source]="salariesChart.remoteSalariesByGrade"></app-salaries-by-grade-block>
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-5 mb-5">
           <app-grades-min-max-chart
-            [salaries]="salariesChart.salaries">
+            [source]="salariesChart">
           </app-grades-min-max-chart>
         </div>
 
